# dep_ing_tqa

./: main.py  pyproject.toml
app/: container.py  database.sqlite  db.py  main.py
app/modules/payments/: repository.py  routes.py  service.py  test_payments.py  utils.py
