[tool.poetry]
name = "dep-injection-talk"
version = "0.1.0"
description = ""
authors = ["Brandon Braner <brandon.braner@gmail.com>"]
readme = "README.md"
packages = [{include = "dep_injection_talk"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
lagom = "^2.4.1"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
